# themewatcher

./: README.md  native.ts  schema.json
extension/: .gitignore  manifest.json  package.json  rollup.config.js  tsconfig.json
extension/src/: background.ts  content.ts  input.ts
extension/static/: settings.html  settings.js
extension/types/: firefox.d.ts
native/: Cargo.toml  manifest.json
native/src/: main.rs  msg.rs
