[package]
name = "themewatcher-messenger"
description = "Native messenger for the Themewatcher Firefox extension."
version = "0.1.0"
authors = ["Max Niederman <max@maxniederman.com>"]
license = "MIT"
edition = "2018"

[dependencies]
notify = "5.0.0-pre.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
